# cpp-scientific-units

./: CMakeLists.txt  README.md
cmake/: Warnings.cmake
include/: are_types_equal_if_instances_are_equal.hpp  orderable.hpp  prefix.hpp  quantity.hpp  quantity_conversions.hpp  unit.hpp
include/metaprogramming/: are_types_equal.hpp  are_types_equal_if_instances_are_equal.hpp  are_variadics_containing_the_same_types.hpp  combine_variadics.hpp  conditional.hpp  get_first_type.hpp  get_nth_type.hpp  is_type_in_variadic.hpp  is_variadic.hpp  metaprogramming.hpp  remove_nth_occurrence_of_type.hpp  remove_type.hpp  remove_types.hpp  skip_first_type.hpp  variadic.hpp
include/q/: acceleration.hpp  electric_charge.hpp  electric_current.hpp  electric_resistance.hpp  energy.hpp  force.hpp  length.hpp  mass.hpp  scalar.hpp  speed.hpp  time.hpp  voltage.hpp
include/quantity/: acceleration.hpp  conversion.hpp  energy.hpp  force.hpp  id.hpp  length.hpp  mass.hpp  orderable.hpp  quantity.hpp  scalar.hpp  speed.hpp  time.hpp  unit.hpp
include/type_arithmetic/: are_type_lists_containing_the_same_types.hpp  are_types_equal_if_instances_are_equal.hpp  are_types_same_if_instances_are_equal.hpp  calculate_type_by_id.hpp  calculate_type_list_intersection.hpp  is_type_in_type_list.hpp  remove_nth_occurrence_of_type_from_list.hpp  remove_type_from_type_list.hpp  remove_type_list_from_type_list.hpp  type_list.hpp
include/type_list/: calculate_type_by_id.hpp  type_list.hpp  (+1 more)
legacy/: are_type_lists_containing_the_same_types.hppx  is_type_in_type_list.hppx  prefix.hppx  remove_nth_occurrence_of_type_from_list.hppx  remove_type_from_type_list.hppx  remove_type_list_from_type_list.hppx  unit.cppx  unit.hppx  variadic.hppx
src/: prefix.cpp
test/: are_types_same_if_instances_are_equal_test.cpp  orderable_test.cpp  prefix_test.cpp  quantity_conversions_test.cpp  quantity_test.cpp  type_arithmetic_tests.cpp  type_list_test.cpp  unit_test.cpp
(+15 files in other folders)
